# GnomeDistort-2

./: .editorconfig  .gitignore  CMakeLists.txt  GnomeDistort 2.jucer  README.md
.github/workflows/: build.yml
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/GnomeDistort 2.xcodeproj/: project.pbxproj
Builds/VisualStudio2022/: GnomeDistort 2.sln  GnomeDistort 2_SharedCode.vcxproj  GnomeDistort 2_SharedCode.vcxproj.filters  GnomeDistort 2_StandalonePlugin.vcxproj  GnomeDistort 2_StandalonePlugin.vcxproj.filters  GnomeDistort 2_VST3.vcxproj  GnomeDistort 2_VST3.vcxproj.filters  GnomeDistort 2_VST3ManifestHelper.vcxproj  resources.rc
Source/: ConstOptions.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginEditor.paintBackground.cpp  PluginProcessor.cpp  PluginProcessor.h  Processing.cpp  Processing.h  WaveshaperFunctions.h
Source/Helpers/: FFTDataGenerator.h  Fifo.h  Settings.h  SingleChannelSampleFifo.h  UpdateCheck.h
Source/Processing/: ConstOptions.h  Parameters.h  Processing.cpp  Processing.h  WaveshaperFunctions.h
Source/UI/: BandControls.cpp  BandControls.h  BandControls.paintBackground.cpp  Display.h  PostBandControls.h  PreBandControls.cpp  PreBandControls.h  UIConsts.h
Source/UI/Controls/: ComboBox.h  ComboBoxLnF.h  DisplayComponent.cpp  DisplayComponent.h  DisplayComponent.paint.cpp  DisplayComponent.resized.cpp  DisplayGraph.cpp  DisplayGraph.h  InvisibleButtonLnF.h  SliderLabeledValue.cpp  SliderLabeledValue.h  TextButton.h  TextSwitch.h  ToggleButtonLnF.h
Source/UI/Displays/: DisplayGraph.cpp  DisplayGraph.h
Source/UI/Theme/: Theme-Basalt.h  Theme-CleanDarkBlue.h  Theme-CleanDarkGreen.h  Theme-CleanDarkRed.h  Theme-CleanLightBlue.h  Theme-CleanLightGreen.h  Theme-CleanLightRed.h  Theme-GnomeDefault.h  Theme-Oscilloscope.h  Theme.h  UIConsts.h
Source/UI/Windows/: AboutWindow.h
